Fixed invisible checkbox when unchecked

--- a/src/containers/Organization/Registration/Registration.module.css
+++ b/src/containers/Organization/Registration/Registration.module.css
@@ -29,6 +29,10 @@
 }
 
 .CustomCheckboxRoot {
-    display: flex !important;
+  display: flex !important;
   align-items: flex-start !important;
+}
+
+.CustomPrimaryCheckboxColor {
+  color: #119656;
 }
